# documentation_assistant_project

./: .gitignore  README.md  ingestion.py  ingestion2.md  ingestion2.py  logger.py  main.py  pyproject.toml  tavily_map_extract.ipynb
.streamlit/: config.toml
backend/: core.py
